--- a/config
+++ b/config
@@ -1,5 +1,7 @@
 # The syntax is "key = value". The whitespace around the equals doesn't matter.
 
+auto-update-channel = tip
+
 keybind = global:cmd+shift+s=toggle_quick_terminal
 
 # background = 282c34
@@ -30,8 +32,8 @@ macos-titlebar-style = hidden
 # background-blur-radius = 2
 
 # shaders
-# custom-shader = shaders/sparks-from-fire.glsl
-# custom-shader = shaders/spotlight.glsl
+custom-shader = shaders/cursor_smear.glsl
+custom-shader = shaders/cursor_blaze_no_trail.glsl
 custom-shader = shaders/inside-the-matrix.glsl
 
 # Colors can be changed by setting the 16 colors of `palette`, which each color
